small fixes and a step-by-step readme

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 **/build
 **/tables
 **/.idea
+client/CMakeCache.txt
+client/CMakeFiles/
+client/MakeFile
+client/cmake_install.cmake
+client/dashiell
+client/Makefile
