--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "~2.3.11",
     "socket.io": "~1.2.1",
-    "ws": "~0.6.4"
+    "ws": "~0.6.4",
+    "body-parser": "~1.10.1",
+    "lodash": "~2.4.1"
   }
 }
