--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "~2.3.11",
     "socket.io": "~1.2.1",
     "ws": "~0.6.4",
     "body-parser": "~1.10.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "express": "~4.11.1"
   },
   "devDependencies": {
     "sloc": "~0.1.9"
